--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,8 +144,9 @@ jobs:
         $Env:ESH_32_DEBUG="esh_$($Env:ESH_VERSION)_i686-pc-windows-msvc_debug.zip"
         echo "ESH_32_DEBUG=$Env:ESH_32_DEBUG" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
       shell: powershell
-    - run: 7z a %ESH_32_DEBUG% %GITHUB_WORKSPACE%\dist\Debug\esh.exe %GITHUB_WORKSPACE%\dist\Debug\esh.pdb %GITHUB_WORKSPACE%\README.md %GITHUB_WORKSPACE%\LICENSE.txt
+    - run: 7z a %ESH_32_DEBUG% .\dist\Debug\esh.exe .\dist\Debug\esh.pdb .\README.md .\LICENSE.txt
       shell: cmd
+      working-directory: ${{env.GITHUB_WORKSPACE}}
     - uses: actions/upload-artifact@v2
       with:
         name: ${{ env.ESH_32_DEBUG }}
