--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   lint_and_docs:
-    if: 'false'
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
@@ -38,7 +37,7 @@ jobs:
     - if: startsWith(github.ref, 'refs/tags/v')
       run: gem install dpl
     - if: startsWith(github.ref, 'refs/tags/v')
-      run: dpl --provider=pages --repo=ni/VireoSDK --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{secrets.GITHUBPAGESDEPLOYTOKEN}}
+      run: dpl --provider=pages --repo=${{ GITHUB_REPOSITORY }} --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{ secrets.GITHUB_TOKEN }}
 
   setup:
     runs-on: ubuntu-16.04
@@ -116,6 +115,7 @@ jobs:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   windows:
+    if: 'false'
     needs: setup
     runs-on: windows-2019
     steps:
