--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,11 +36,8 @@ jobs:
         ruby-version: '2.6'
     - if: startsWith(github.ref, 'refs/tags/v')
       run: gem install dpl
-    - run: echo ${{env.GITHUB_REPOSITORY}}
     - if: startsWith(github.ref, 'refs/tags/v')
-      run: echo ${{env.GITHUB_REPOSITORY}}
-    - if: startsWith(github.ref, 'refs/tags/v')
-      run: dpl --provider=pages --repo=${{env.GITHUB_REPOSITORY}} --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{ secrets.GITHUB_TOKEN }}
+      run: dpl --provider=pages --repo=rajsite/VireoSDK --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{ secrets.GITHUB_TOKEN }}
 
   setup:
     runs-on: ubuntu-16.04
