--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   lint_and_docs:
-    if: 'false'
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
@@ -40,25 +39,7 @@ jobs:
     - if: startsWith(github.ref, 'refs/tags/v')
       run: dpl --provider=pages --repo=rajsite/VireoSDK --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{ secrets.GITHUB_PAGES_TOKEN }}
 
-  setup:
-    runs-on: ubuntu-16.04
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-    steps:
-      - if: startsWith(github.ref, 'refs/tags/v')
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: false
-          prerelease: false
-
   web:
-    if: 'false'
-    needs: setup
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
@@ -115,19 +96,28 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+  setup:
+    runs-on: ubuntu-16.04
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+    steps:
+      - if: startsWith(github.ref, 'refs/tags/v')
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
+          prerelease: false
+
   windows:
     needs: setup
     runs-on: windows-2016
     steps:
     - uses: actions/checkout@v2
     - uses: microsoft/setup-msbuild@v1
-    # Currently the VireoCommandLine.sln needs Windows SDK 8.1 which is not included on GitHub Actions by default
-    # see https://github.com/actions/virtual-environments/issues/842#issuecomment-643382166
-    # - name: Install Windows 8.1 SDK
-    #   run: |
-    #     Invoke-WebRequest -Method Get -Uri https://go.microsoft.com/fwlink/p/?LinkId=323507 -OutFile sdksetup.exe -UseBasicParsing
-    #     Start-Process -Wait sdksetup.exe -ArgumentList "/q", "/norestart", "/features", "OptionId.WindowsDesktopSoftwareDevelopmentKit", "OptionId.NetFxSoftwareDevelopmentKit"
-    #   shell: powershell
     - uses: actions/setup-node@v1
       with:
         node-version: '12'
@@ -135,7 +125,7 @@ jobs:
     - run: npm ci
     - run: chocolatey install make -y
     - run: chocolatey install gnuwin32-coreutils.portable -y
-    - run: msbuild /m /p:Configuration=Debug Vireo_VS\VireoCommandLine.sln
+    - run: msbuild /m /p:Configuration=Debug /p:PlatformTarget=Win32 Vireo_VS\VireoCommandLine.sln
 
     - name: calculate release name
       run: |
@@ -156,13 +146,22 @@ jobs:
     - run: tzutil /s "Central Standard Time"
     - run: make testnative
 
+    - if: startsWith(github.ref, 'refs/tags/v')
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ needs.setup.outputs.upload_url }}
+        asset_name: ${{ env.ESH_32_DEBUG }}
+        asset_path: ${{ env.ESH_32_DEBUG }}
+        asset_content_type: application/zip
+
     - uses: nuget/setup-nuget@v1
     - run: nuget pack VireoSDK.nuspec -properties version="$Env:ESH_VERSION"
     - if: startsWith(github.ref, 'refs/tags/v')
       run: nuget push $(echo (get-item ./*.nupkg).FullName) --api-key {{ secrets.NUGET_TOKEN}} --source https://api.nuget.org/v3/index.json
 
   linux:
-    if: 'false'
     needs: setup
     runs-on: ubuntu-16.04
     steps:
