GitHub Actions nuget artifact

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,6 +147,14 @@ jobs:
     - run: tzutil /s "Central Standard Time"
     - run: make testnative
 
+    - uses: nuget/setup-nuget@v1
+    - run: nuget pack VireoSDK.nuspec -properties version="$Env:ESH_VERSION"
+    - uses: actions/upload-artifact@v2
+      with:
+        name: nuget package
+        path: ./*.nupkg
+        if-no-files-found: error
+
     - if: startsWith(github.ref, 'refs/tags/v')
       uses: actions/upload-release-asset@v1
       env:
@@ -156,9 +164,6 @@ jobs:
         asset_name: ${{ env.ESH_32_DEBUG }}
         asset_path: ${{ env.ESH_32_DEBUG }}
         asset_content_type: application/zip
-
-    - uses: nuget/setup-nuget@v1
-    - run: nuget pack VireoSDK.nuspec -properties version="$Env:ESH_VERSION"
     - if: startsWith(github.ref, 'refs/tags/v')
       run: nuget push $(echo (get-item ./*.nupkg).FullName) --api-key {{ secrets.NUGET_TOKEN}} --source https://api.nuget.org/v3/index.json
 
