--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -168,7 +168,10 @@ jobs:
         asset_path: ${{ env.ESH_32_DEBUG }}
         asset_content_type: application/zip
     - # if: startsWith(github.ref, 'refs/tags/v')
-      run: nuget push $(echo (get-item ./*.nupkg).FullName) -ApiKey {{ secrets.NUGET_TOKEN}} -Source https://api.nuget.org/v3/index.json
+      run: |
+        $PACKAGE_PATH = (get-item ./*.nupkg).FullName
+        echo $PACKAGE_PATH
+        nuget push $PACKAGE_PATH -ApiKey test -Source "https://api.nuget.org/v3/index.json"
 
   linux:
     if: 'false'
