GitHub Actions test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -170,7 +170,7 @@ jobs:
     - # if: startsWith(github.ref, 'refs/tags/v')
       run: |
         $PACKAGE_PATH = (get-item ./*.nupkg).FullName
-        nuget push $PACKAGE_PATH -ApiKey {{secrets.NUGET_TOKEN}} -Source "https://api.nuget.org/v3/index.json"
+        nuget push $PACKAGE_PATH -ApiKey ${{secrets.NUGET_TOKEN}} -Source "https://api.nuget.org/v3/index.json"
 
   linux:
     if: 'false'
