--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   lint_and_docs:
-    # if: 'false'
+    if: 'false'
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
@@ -53,7 +53,7 @@ jobs:
       run: dpl --provider=pages --repo=rajsite/VireoSDK --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{ secrets.GHPAGES_TOKEN }}
 
   web:
-    # if: 'false'
+    if: 'false'
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
@@ -112,6 +112,38 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+  web-win:
+    # if: 'false'
+    needs: setup
+    runs-on: windows-2016
+    steps:
+    - uses: actions/checkout@v2
+
+    # Install windows dependencies
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12'
+        registry-url: 'https://registry.npmjs.org'
+    - run: npm ci
+    - run: chocolatey install make -y
+    - run: chocolatey install gnuwin32-coreutils.portable -y
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.5'
+    - run: |
+        python -m pip install --upgrade pip
+        pip install tox
+    - run: Start-Process npm "run httpbin" -PassThru
+    - run: |
+        git clone https://github.com/juj/emsdk.git
+        cd emsdk
+        git checkout 369013943283939412fb2807bb0d2ded8ebd5a9e
+    - run: |
+        emsdk\emsdk install 1.39.5-fastcomp
+        emsdk\emsdk activate 1.39.5-fastcomp
+    - run: emsdk\emsdk_env.bat && emcc -v
+    - run: emcc -v
+
   setup:
     runs-on: ubuntu-16.04
     outputs:
@@ -142,8 +174,6 @@ jobs:
         node-version: '12'
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
-    - run: chocolatey install make -y
-    - run: chocolatey install gnuwin32-coreutils.portable -y
 
     # Build windows
     - run: msbuild /m /p:Configuration=Debug /p:PlatformTarget=Win32 Vireo_VS\VireoCommandLine.sln
@@ -172,7 +202,7 @@ jobs:
 
     # Test windows
     - run: tzutil /s "Central Standard Time"
-    - run: make testnative
+    - run: cd test-it && node test.js -n --dots
 
     # Publish windows release and nuget package
     - if: startsWith(github.ref, 'refs/tags/v')
@@ -190,7 +220,7 @@ jobs:
         nuget push $PACKAGE_PATH -ApiKey ${{secrets.NUGET_TOKEN}} -Source "https://api.nuget.org/v3/index.json"
 
   linux:
-    # if: 'false'
+    if: 'false'
     needs: setup
     runs-on: ubuntu-16.04
     steps:
