--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,7 +141,10 @@ jobs:
     - run: |
         emsdk\emsdk install 1.39.5-fastcomp
         emsdk\emsdk activate 1.39.5-fastcomp
-    - run: emsdk\emsdk_env.bat && emcc -v
+    - run: emsdk\emsdk_env.ps1 && emcc -v
+    - run: |
+        emsdk\emsdk_env.ps1
+        emcc -v
     - run: emcc -v
 
   setup:
@@ -161,7 +164,7 @@ jobs:
           prerelease: false
 
   windows:
-    # if: 'false'
+    if: 'false'
     needs: setup
     runs-on: windows-2016
     steps:
