--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
     - if: startsWith(github.ref, 'refs/tags/v')
       run: gem install dpl
     - if: startsWith(github.ref, 'refs/tags/v')
-      run: dpl --provider=pages --repo=rajsite/VireoSDK --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{ secrets.GHPAGES_TOKEN }}
+      run: dpl --provider=pages --repo=ni/VireoSDK --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{ secrets.GHPAGES_TOKEN }}
 
   web:
     # if: 'false'
@@ -114,7 +114,6 @@ jobs:
 
   web-win:
     # if: 'false'
-    needs: setup
     runs-on: windows-2016
     steps:
     - uses: actions/checkout@v2
