--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
   lint-and-docs:
     # if: 'false'
     runs-on: ubuntu-16.04
+    timeout-minutes: 25
     steps:
     - uses: actions/checkout@v2
 
@@ -55,6 +56,7 @@ jobs:
   web:
     # if: 'false'
     runs-on: ubuntu-16.04
+    timeout-minutes: 25
     steps:
     - uses: actions/checkout@v2
 
@@ -115,6 +117,7 @@ jobs:
   web-windows:
     # if: 'false'
     runs-on: windows-2016
+    timeout-minutes: 25
     steps:
     - uses: actions/checkout@v2
 
@@ -158,6 +161,7 @@ jobs:
 
   setup:
     runs-on: ubuntu-16.04
+    timeout-minutes: 25
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
@@ -176,6 +180,7 @@ jobs:
     # if: 'false'
     needs: setup
     runs-on: windows-2016
+    timeout-minutes: 25
     steps:
     - uses: actions/checkout@v2
 
@@ -235,6 +240,7 @@ jobs:
     # if: 'false'
     needs: setup
     runs-on: ubuntu-16.04
+    timeout-minutes: 25
     steps:
     - uses: actions/checkout@v2
 
