--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
     - 'v*'
 
 jobs:
-  lint-and-docs:
+  lint:
     # if: 'false'
     runs-on: ubuntu-16.04
     timeout-minutes: 25
@@ -30,28 +30,7 @@ jobs:
     # Run lint
     - run: make lint
     - run: npm run lint
-
-    # Install docs dependencies
-    - run: sudo apt-get install doxygen
-
-    # Build docs
-    - run: npm run doxygen
-    - run: zip -rq gh-pages.zip gh-pages
-    - uses: actions/upload-artifact@v2
-      with:
-        name: gh-pages build
-        path: gh-pages.zip
-        if-no-files-found: error
-
-    # Publish docs to GitHub Pages
-    - if: startsWith(github.ref, 'refs/tags/v')
-      uses: actions/setup-ruby@v1
-      with:
-        ruby-version: '2.6'
-    - if: startsWith(github.ref, 'refs/tags/v')
-      run: gem install dpl
-    - if: startsWith(github.ref, 'refs/tags/v')
-      run: dpl --verbose --provider=pages --repo=ni/VireoSDK --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{ secrets.GHPAGES_TOKEN }}
+    - run: npm run lint-markdown
 
   web:
     # if: 'false'
