--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
     # Install lint dependencies
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: '3.5'
     - uses: actions/setup-node@v1
       with:
         node-version: '14'
@@ -42,7 +42,7 @@ jobs:
     # Install web dependencies
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: '3.5'
     - run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
@@ -55,7 +55,7 @@ jobs:
     - run: |
         git clone https://github.com/juj/emsdk.git
         cd emsdk
-        git checkout f44b84154703d29a946d51ddee08f4e5725a61db
+        git checkout tags/2.0.23
     - run: |
         emsdk/emsdk install 2.0.23
         emsdk/emsdk activate 2.0.23
@@ -110,7 +110,7 @@ jobs:
     - run: chocolatey install gnuwin32-coreutils.portable -y
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: '3.5'
     - run: |
         python -m pip install --upgrade pip
         pip install tox
@@ -118,7 +118,7 @@ jobs:
     - run: |
         git clone https://github.com/juj/emsdk.git
         cd emsdk
-        git checkout f44b84154703d29a946d51ddee08f4e5725a61db
+        git checkout tags/2.0.23
     - run: |
         emsdk\emsdk install 2.0.23
         emsdk\emsdk activate 2.0.23
