Markdown lint ignore github docs
See https://github.com/ni/VireoSDK/issues/701

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "test-asmjs": "karma start karma.asmjs.conf.js --browsers ChromeHeadlessNoSandbox,FirefoxHeadless",
     "lint": "eslint .",
     "lint-markdown": "npm run lint-markdown-style && npm run lint-markdown-links",
-    "lint-markdown-links": "glob-exec --foreach \"{./*.md,./docs/*.md}\" -- \"npm run markdown-link-check -- {{file}}\"",
+    "lint-markdown-links": "glob-exec --foreach \"{./*.md,./docs/*.md}\" -- \"npm run markdown-link-check -- -c .linkcheck.json {{file}}\"",
     "markdown-link-check": "markdown-link-check",
     "lint-markdown-style": "markdownlint {./*.md,./docs/*.md}",
     "prehttpbin": "python -V && pip -V && virtualenv --version && tox --version",
