--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "diff": "^5.0.0",
     "eslint": "^7.18.0",
     "glob-exec": "^0.1.1",
-    "jasmine-core": "^3.5.0",
+    "jasmine": "3.5.0",
+    "jasmine-core": "3.5.0",
     "jasmine-expect": "^5.0.0",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
