--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,18 +12,18 @@ on:
 jobs:
   lint:
     # if: 'false'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 25
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     # Install lint dependencies
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v5
       with:
-        python-version: '3.7'
-    - uses: actions/setup-node@v1
+        python-version: '3.12'
+    - uses: actions/setup-node@v4
       with:
-        node-version: '12'
+        node-version: '20'
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
 
@@ -34,22 +34,22 @@ jobs:
 
   web:
     # if: 'false'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 25
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     # Install web dependencies
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v5
       with:
-        python-version: '3.7'
+        python-version: '3.12'
     - run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - run: nohup python -m httpbin.core --port 64526 --host 0.0.0.0 &
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v4
       with:
-        node-version: '12'
+        node-version: '20'
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
     - run: |
@@ -95,22 +95,22 @@ jobs:
 
   web-windows:
     # if: 'false'
-    runs-on: windows-2016
+    runs-on: windows-2022
     timeout-minutes: 25
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     # Install web-windows dependencies
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v4
       with:
-        node-version: '12'
+        node-version: '20'
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
-    - run: chocolatey install make -y
-    - run: chocolatey install gnuwin32-coreutils.portable -y
-    - uses: actions/setup-python@v2
+    - run: choco install make -y
+    - run: choco install gnuwin32-coreutils.portable -y
+    - uses: actions/setup-python@v5
       with:
-        python-version: '3.7'
+        python-version: '3.12'
     - run: |
         python -m pip install --upgrade pip
         pip install tox
@@ -127,7 +127,7 @@ jobs:
     # Build web-windows
     - run: emsdk\emsdk_env.ps1 && make vjs
     - run: npm pack
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v4
       with:
         name: npm package win build
         path: ./vireo-*.tgz
@@ -139,7 +139,7 @@ jobs:
     - run: npm run test-min
 
   setup:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 25
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
@@ -159,16 +159,16 @@ jobs:
   windows:
     # if: 'false'
     needs: setup
-    runs-on: windows-2016
+    runs-on: windows-2022
     timeout-minutes: 25
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     # Install windows dependencies
-    - uses: microsoft/setup-msbuild@v1
-    - uses: actions/setup-node@v1
+    - uses: microsoft/setup-msbuild@v2
+    - uses: actions/setup-node@v4
       with:
-        node-version: '12'
+        node-version: '20'
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
 
@@ -184,14 +184,14 @@ jobs:
     - run: 7z a %ESH_32_DEBUG% .\dist\Debug\esh.exe .\dist\Debug\esh.pdb .\README.md .\LICENSE.txt
       shell: cmd
       working-directory: ${{env.GITHUB_WORKSPACE}}
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v4
       with:
         name: ${{ env.ESH_32_DEBUG }}
         path: ${{ env.ESH_32_DEBUG }}
         if-no-files-found: error
-    - uses: nuget/setup-nuget@v1
+    - uses: nuget/setup-nuget@v2
     - run: nuget pack VireoSDK.nuspec -properties version="$Env:ESH_VERSION"
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v4
       with:
         name: nuget package
         path: ./*.nupkg
@@ -219,15 +219,15 @@ jobs:
   linux:
     # if: 'false'
     needs: setup
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 25
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     # Install linux dependencies
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v4
       with:
-        node-version: '12'
+        node-version: '20'
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
     - run: echo gcc -v
@@ -240,7 +240,7 @@ jobs:
         export ESH_64_RELEASE="esh_"$ESH_VERSION"_x86_64-unknown-linux-gnu_release.zip"
         echo "ESH_64_RELEASE=$ESH_64_RELEASE" >> $GITHUB_ENV
     - run: zip -j $ESH_64_RELEASE dist/esh README.md LICENSE.txt
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v4
       with:
         name: ${{ env.ESH_64_RELEASE }}
         path: ${{ env.ESH_64_RELEASE }}
