Update tooling versions for actions (#704)
Updates the tooling dependencies for VireoSDK such as:

- Node, Python, and Visual Studio versions (the `Build.md` was updated
to reflect that change)
- GitHub Action Operating Systems and Action versions

Notably this does not change:

- Emscripten toolchain versions
- JavaScript build dependency versions
- Note that the npm lock file is a mechanical change to their latest
format. I did a manual scan to verify that the effective package
versions did not change.
- Does not validate the xcode project / migrate to modern versions

Intention is to keep the pipeline healthy while avoiding any other
changes at least for this PR.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "diff": "^5.0.0",
     "eslint": "^7.18.0",
     "glob-exec": "^0.1.1",
-    "jasmine-core": "^3.5.0",
+    "jasmine": "3.5.0",
+    "jasmine-core": "3.5.0",
     "jasmine-expect": "^5.0.0",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
@@ -44,7 +45,8 @@
     "lint-markdown-style": "markdownlint {./*.md,./docs/*.md}",
     "prehttpbin": "python -V && pip -V && virtualenv --version && tox --version",
     "httpbin": "tox",
-    "httpbin-start": "start cmd /c npm run httpbin"
+    "httpbin-start": "start cmd /c npm run httpbin",
+    "split-wrapper": "cd make-it && node splitVireoWrapper.js"
   },
   "repository": {
     "type": "git",
